[StationTracker] Fixed the overlapping Gantt by fixing the KPI header size (for now) + Fixed an issue with previous / next shift on the Gantt + Refined lifecycle for DHTMLX Custom component

--- a/MES/WebContent/components/stationtracker/css/stationTracker.css
+++ b/MES/WebContent/components/stationtracker/css/stationTracker.css
@@ -574,6 +574,10 @@ background-color: #0085AD !important;
 
 /***** KPI Header Cotent *****/
 
+#stationTrackerView--kpiHeaderContent{
+	height: 195px;
+}
+
 #stationTrackerView--kpiHeaderContent .contentHeaderCont {
 	white-space: normal;
 	background-color: #0F2D65;
@@ -654,6 +658,7 @@ background-color: #0085AD !important;
 	right: -10px;
 	width: auto;
 	color: #52aec8;
+	text-align: center;	
 
 	display: inline-block;
 	font: normal normal normal 30px/1 FontAwesome;
@@ -672,9 +677,10 @@ background-color: #0085AD !important;
 
 #stationTrackerView--stationtracker .dhx_cal_prev_button{
 	position: absolute;
-	right: 15px;
+	right: 20px;
 	width: auto;
 	color: #52aec8;
+	text-align: center;
 
 	display:inline-block;
 	font:normal normal normal 30px/1 FontAwesome;
